<resources>
    <string name="app_name" translatable="false">MeFit+</string>
    <string name="userName">Name:</string>
    <string name="userWeight">"Weight: "</string>
    <string name="userHeight">"Height: "</string>
    <string name="userBirthdate">"Birthdate: "</string>
    <string name="userGender">"Gender: "</string>
    <string name="fields_default_error">You need to insert information in all fields</string>
    <string name="fields_empty_error">Requested</string>
    <string name="userPmin">Ideal Minimum Weight:</string>
    <string name="userPmax">Ideal Maximum Weight:</string>
    <string name="userFatIndex">Fat Index (%):</string>
    <string name="userFatMass">Fat Mass:</string>
    <string name="userTotalWater">Total Water:</string>
    <string name="userMineral">Mineral:</string>
    <string name="userProtein">Protein:</string>
    <string name="register">Register</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="registerTxt">You don\'t have an account? Create one!</string>
    <string name="passwordField">Password:</string>
    <string name="weighingDate">Weighing Date:</string>
    <string name="emptyField">Required!</string>
    <string name="passwords_match">Paswords Do not Match!</string>
    <string name="userSuccess">User Created Successfully!</string>
    <string name="userFail">User Creation Failed!</string>
    <string name="settingsTxt">Settings</string>
    <string name="logoutTxt">Logout</string>
    <string name="calculateIMCTxt">Calculate New IMC</string>
    <string name="userInfo">User Info</string>
    <string name="changePassword">Change Password</string>
    <string name="currentPassword">Current Password:</string>
    <string name="newPassword">New Password:</string>
    <string name="LoadingTxt">Loading, please wait...</string>
    <string name="emailNotExist">Email Does Not Exist!</string>
    <string name="emailSent">Email Sent Successfully!</string>
    <string name="passwordChange">Password Changed Successfully!</string>
    <string name="passwordNotChange">Password Change Error!</string>
    <string name="genderFemale">Female</string>
    <string name="genderMale">Male</string>
    <string name="userIg">Fat Index (%):</string>
    <string name="userMg">Fat Mass:</string>
    <string name="userAt">Total Water:</string>
    <string name="timeTxt">Time:</string>
    <string name="delEntryTitle">Delete Entry</string>
    <string name="delEntryText">Are you certain that you want to del this entry?</string>
    <string name="newEmail">New Email:</string>
    <string name="emailNotSent">Email Not Sent!</string>
</resources>
