<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfo"
    android:layout_margin="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/nameFieldUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>

        <TextView
            android:text="@string/userBirthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/birthDateFieldUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            android:enabled="false"/>

        <TextView
            android:text="@string/userGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/genderFieldUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>

        <TextView
            android:text="@string/userHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/heightFieldUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>

        <TextView
            android:text="Email:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/emailFieldUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>

        <Button
            android:id="@+id/changePasswordUserInfo"
            android:textStyle="bold"
            android:text="@string/changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickUserInfo"/>
    </LinearLayout>

</ScrollView>