<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:layout_margin="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/currentPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/passwordFieldChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:text="@string/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/newPasswordFieldChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:text="@string/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/confirmPasswordFieldChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_marginBottom="50dp"/>

        <Button
            android:id="@+id/saveBtnChangePassword"
            android:text="@string/fui_button_text_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickChangePassword"/>
    </LinearLayout>

</ScrollView>