<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8sp"
        android:gravity="center_horizontal">


        <RelativeLayout
            android:id="@+id/imc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp">

            <TextView
                android:id="@+id/imc_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IMC:"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/txtImc"
                android:layout_below="@+id/imc_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:enabled="false" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/pmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_marginTop="30sp">

            <TextView
                android:id="@+id/pmin_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPmin"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/txtPmin"
                android:layout_below="@+id/pmin_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:enabled="false" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/pmax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_marginTop="30sp">

            <TextView
                android:id="@+id/pmax_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPmax"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/txtPmax"
                android:layout_below="@+id/pmax_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:enabled="false" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/ig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_marginTop="30sp">

            <TextView
                android:id="@+id/ig_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userFatIndex"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/txtIg"
                android:layout_below="@+id/ig_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:enabled="false" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/mg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_marginTop="30sp">

            <TextView
                android:id="@+id/mg_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userFatMass"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/txtMg"
                android:layout_below="@+id/mg_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:enabled="false" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_marginTop="30sp">

            <TextView
                android:id="@+id/at_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userTotalWater"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/txtAt"
                android:layout_below="@+id/at_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:enabled="false" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/mineral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_marginTop="30sp">

            <TextView
                android:id="@+id/mineral_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userMineral"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/txtMineral"
                android:layout_below="@+id/mineral_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:enabled="false" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/proteina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:layout_marginTop="30sp">

            <TextView
                android:id="@+id/proteina_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userProtein"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/txtProteina"
                android:layout_below="@+id/proteina_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:enabled="false" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>