<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:layout_margin="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progressBar"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_margin="8sp"/>

        <!-- Email Stuff -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="Email:"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/emailFieldRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="20sp"/>

        </LinearLayout>
        <!-- End Email Stuff -->

        <!-- Password Stuff -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:text="@string/passwordField"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/passwordFieldRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"/>

        </LinearLayout>
        <!-- End Password Stuff -->

        <!-- Password Confirm Stuff -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:text="@string/confirm"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/confirmPasswordFieldRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="20sp"/>

        </LinearLayout>
        <!-- End Password Confirm Stuff -->

        <!-- Divider -->
        <View
            android:layout_marginTop="35sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="15sp"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/darker_gray"/>
        <!-- End Divider -->

        <!-- Name Stuff -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- End Name Stuff -->

        <!-- Wight Stuff -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userWeight"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/weightRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- End Wight Stuff -->

        <!-- Height Stuff -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userHeight"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/heightRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- End Height Stuff -->

        <!-- Age Stuff -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userBirthdate"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/birthDateRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:onClick="onClickRegister"
                android:inputType="date"
                android:focusableInTouchMode="false" />

        </LinearLayout>
        <!-- End Age Stuff -->

        <!-- Gender Stuff -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userGender"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/genderMRegister"
                    android:text="M"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickRegister"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/genderFRegister"
                    android:text="F"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:onClick="onClickRegister"/>
            </LinearLayout>

        </LinearLayout>
        <!-- End Gender Stuff -->

        <!-- Register Button Stuff -->
        <Button
            android:id="@+id/registerBtn"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickRegister"
            android:layout_marginTop="35sp" />
        <!-- End Register Button Stuff -->

    </LinearLayout>

</ScrollView>