<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowUserImcActivity"
    android:layout_margin="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Imc Stuff -->
        <TextView
            android:text="IMC:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/imcShowImc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>
        <!-- End Imc Stuff -->

        <!-- Pmin Stuff -->
        <TextView
            android:text="@string/userPmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/pminShowImc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>
        <!-- End Pmin Stuff -->

        <!-- Pmax Stuff -->
        <TextView
            android:text="@string/userPmax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/pmaxShowImc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>
        <!-- End Pmax Stuff -->

        <!-- Ig Stuff -->
        <TextView
            android:text="@string/userIg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/igShowImc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>
        <!-- End Ig Stuff -->

        <!-- Mg Stuff -->
        <TextView
            android:text="@string/userMg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/mgShowImc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>
        <!-- End Mg Stuff -->

        <!-- At Stuff -->
        <TextView
            android:text="@string/userAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/atShowImc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>
        <!-- End At Stuff -->

        <!-- Mineral Stuff -->
        <TextView
            android:text="@string/userMineral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/mineralShowImc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>
        <!-- End Mineral Stuff -->

        <!-- Protein Stuff -->
        <TextView
            android:text="@string/userProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/proteinShowImc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:enabled="false"/>
        <!-- End Mineral Stuff -->

    </LinearLayout>




<!--        <RelativeLayout-->
<!--            android:id="@+id/ig"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8sp"-->
<!--            android:layout_marginTop="30sp">-->

<!--            <TextView-->
<!--                android:id="@+id/ig_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/userFatIndex"-->
<!--                android:textSize="32sp" />-->

<!--            <EditText-->
<!--                android:id="@+id/txtIg"-->
<!--                android:layout_below="@+id/ig_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="20sp"-->
<!--                android:enabled="false" />-->
<!--        </RelativeLayout>-->


<!--        <RelativeLayout-->
<!--            android:id="@+id/mg"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8sp"-->
<!--            android:layout_marginTop="30sp">-->

<!--            <TextView-->
<!--                android:id="@+id/mg_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/userFatMass"-->
<!--                android:textSize="32sp" />-->

<!--            <EditText-->
<!--                android:id="@+id/txtMg"-->
<!--                android:layout_below="@+id/mg_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="20sp"-->
<!--                android:enabled="false" />-->
<!--        </RelativeLayout>-->


<!--        <RelativeLayout-->
<!--            android:id="@+id/at"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8sp"-->
<!--            android:layout_marginTop="30sp">-->

<!--            <TextView-->
<!--                android:id="@+id/at_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/userTotalWater"-->
<!--                android:textSize="32sp" />-->

<!--            <EditText-->
<!--                android:id="@+id/txtAt"-->
<!--                android:layout_below="@+id/at_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="20sp"-->
<!--                android:enabled="false" />-->
<!--        </RelativeLayout>-->


<!--        <RelativeLayout-->
<!--            android:id="@+id/mineral"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8sp"-->
<!--            android:layout_marginTop="30sp">-->

<!--            <TextView-->
<!--                android:id="@+id/mineral_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/userMineral"-->
<!--                android:textSize="32sp" />-->

<!--            <EditText-->
<!--                android:id="@+id/txtMineral"-->
<!--                android:layout_below="@+id/mineral_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="20sp"-->
<!--                android:enabled="false" />-->
<!--        </RelativeLayout>-->


<!--        <RelativeLayout-->
<!--            android:id="@+id/proteina"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8sp"-->
<!--            android:layout_marginTop="30sp">-->

<!--            <TextView-->
<!--                android:id="@+id/proteina_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/userProtein"-->
<!--                android:textSize="32sp" />-->

<!--            <EditText-->
<!--                android:id="@+id/txtProteina"-->
<!--                android:layout_below="@+id/proteina_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:textSize="20sp"-->
<!--                android:enabled="false" />-->
<!--        </RelativeLayout>-->

<!--    </LinearLayout>-->

</ScrollView>


<!--    30-11-2019-->
<!--    17-48-08-->
<!--    date:-->
<!--    "30-11-2019"-->
<!--    imc:-->
<!--    22.9-->
<!--    imcAt:-->
<!--    38.4-->
<!--    imcIg:-->
<!--    15.4-->
<!--    imcMg:-->
<!--    9.2-->
<!--    imcMineral:-->
<!--    4.1-->
<!--    imcPmax:-->
<!--    65.6-->
<!--    imcPmin:-->
<!--    52.5-->
<!--    imcProtein:-->
<!--    8.3-->
<!--    time:-->
<!--    "17-48-08"-->
